--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FunBot – Discord Sunucun için en iyi Bot.</title>
-    <link rel="icon" type="image/png" href="/assets/img/Nors.png">
+    <link rel="icon" type="image/png" href="/assets/img/FunBot.png">
     <meta property="og:title" content="FunBot">
-    <meta name="og:description" content="Discord Sunucun için geliştirilmiş Türkçe #1 Numaralı Botu.">
+    <meta name="og:description" content="Discord Sunucun için geliştirilmiş.">
     <meta property="og:image" content="/assets/img/Nors.png">
     <meta property="og:url" content="/">
     <meta name="theme-color" content="#5a4fcf">
