--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="/assets/img/FunBot.png">
     <meta property="og:title" content="FunBot">
     <meta name="og:description" content="Discord Sunucun için geliştirilmiş.">
-    <meta property="og:image" content="/assets/img/Nors.png">
+    <meta property="og:image" content="/assets/img/FunBot.png">
     <meta property="og:url" content="/">
     <meta name="theme-color" content="#5a4fcf">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"
@@ -40,7 +40,7 @@
     <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
-                <img src="/assets/img/Nors.png" draggable="false" class="h-7 mr-3" alt="IMG">
+                <img src="/assets/img/FunBot.png" draggable="false" class="h-7 mr-3" alt="IMG">
                 <span class="regularTextBold text-white self-center whitespace-nowrap">Nors</span>
             </a>
             <div class="flex md:order-2">
@@ -82,7 +82,7 @@
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16 mt-8">
             <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Türkçe
-                <span class="gradientColor">#1 Numaralı</span> Kayıt Botu.
+                <span class="gradientColor">#1 Numaralı</span> Bot
             </h1>
             <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Nors, sunucun için ayarlanabilen en
                 iyi kayıt sistemlerine sahiptir.</p>
