--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16 mt-8">
-            <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun için geliştirilmiş Türkçe
+            <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun İçin Geliştirilmiş Türkçe
                 <span class="gradientColor">#1 Numaralı</span> Bot
             </h1>
             <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Nors, sunucun için ayarlanabilen en
