--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>FunBot – Discord Sunucun için en iyi Bot.</title>
     <link rel="icon" type="image/png" href="/assets/img/FunBot.png">
     <meta property="og:title" content="FunBot">
-    <meta name="og:description" content="Discord Sunucun için geliştirilmiş.">
+    <meta name="og:description" content="Discord Sunucun İçin Geliştirilmiş.">
     <meta property="og:image" content="/assets/img/FunBot.png">
     <meta property="og:url" content="/">
     <meta name="theme-color" content="#5a4fcf">
@@ -41,7 +41,7 @@
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
                 <img src="/assets/img/FunBot.png" draggable="false" class="h-7 mr-3" alt="IMG">
-                <span class="regularTextBold text-white self-center whitespace-nowrap">Nors</span>
+                <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
             </a>
             <div class="flex md:order-2">
                 <a href="/invite" target="_blank"><button type="button"
@@ -81,11 +81,10 @@
 
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16 mt-8">
-            <h1 class="blackText text-white mb-4 tracking-tight leading-none">Discord Sunucun İçin Geliştirilmiş Türkçe
+            <h1 class="blackText text-white mb-4 tracking-tight leading-none">FunBot, Discord Sunucun İçin Geliştirilmiş Türkçe
                 <span class="gradientColor">#1 Numaralı</span> Bot
             </h1>
-            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">Nors, sunucun için ayarlanabilen en
-                iyi kayıt sistemlerine sahiptir.</p>
+            <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">FunBot, Sunucun İçin Sana Yardımcı Olabilecek Bot.</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="/invite" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
@@ -103,10 +102,10 @@
                 </a>
             </div>
             <p class="smallText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48"><span class="mr-2"><i
-                        class="fa-regular fa-check mr-1 opacity-90"></i> <span class="opacity-60">Tamamiyle
-                        ayarlanabilir</span></span> <span class="mr-2"><i
+                        class="fa-regular fa-check mr-1 opacity-90"></i> <span class="opacity-60">Sana Yardımcı
+                        Olacak</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
-                    <span class="opacity-60">Tamamen ücretsiz</span></span></p>
+                    <span class="opacity-60">Tamamen Türkçe</span></span></p>
             <img class="mt-8" src="/assets/img/TYPE1.png" draggable="false" alt="IMG">
         </div>
     </section>
@@ -117,8 +116,7 @@
             <br>
             <p class="boldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">Tamamen <span
                     class="gradientColor"><b>senin sunucun</b></span> için tasarlandı.</p>
-            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">100 binden fazla Discord sunucusu
-                tarafından kullanılıyor – 7/24</p>
+            <p class="regularTextIta text-white opacity-60 mb-8 sm:px-16 lg:px-48">FunBot, Sunucunuzdaki Eğlenceyi Artırmak, Moderasyonu Kolaylaştırmak, Bot List, Abone Sistemi, Kayıt Sistemi, NSFW Vardır Kullanmak İçin Beni Davet Et Kullanımı Kolaydır</p>
             <br>
             <hr class="customHr">
         </div>
@@ -127,9 +125,8 @@
     <section class="section">
         <div class="py-8 px-4 mx-auto max-w-6xl lg:py-16">
             <p class="extraBoldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48"><span
-                    class="gradientColor"><b>Kurulumu</b></span> son derece basit</p>
-            <p class="smallText text-white opacity-80 mb-8 sm:px-16 lg:px-48">1 dakikadan kısa bir süre içinde Discord
-                Sunucun için kurulumu tamamla!</p>
+                    class="gradientColor"><b>Kurulumsuz</b></span>Kullanması Son Derece Basit</p>
+            <p class="smallText text-white opacity-80 mb-8 sm:px-16 lg:px-48">Kurulum Gerekmez!</p>
             <br>
             <div class="sm:px-16 lg:px-48">
                 <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
@@ -138,7 +135,7 @@
                             <p class="smallText text-white opacity-80 mt-5">Adım 1</p>
                             <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Sunucuna
                                         ekle</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">Nors'u sunucuna ekle.</p>
+                            <p class="smallText text-white opacity-80 mt-3">FunBot'u Sunucuna Ekle.</p>
                         </div>
                     </div>
                     <div class="card h-full">
@@ -146,18 +143,18 @@
                             <p class="smallText text-white opacity-80 mt-5">Adım 2</p>
                             <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Komutu
                                         kullan</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">/:CMDNAME komutunu kullanarak kayıt
-                                sistemini
-                                hazır hale getir.</p>
+                            <p class="smallText text-white opacity-80 mt-3">F!Komutlar Yaz Ve 
+                                Komutları
+                                Görüntüle.</p>
                         </div>
                     </div>
                     <div class="card h-full">
                         <div class="items-center overflow-hidden">
                             <p class="smallText text-white opacity-80 mt-5">Adım 3</p>
-                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Her şey
-                                        hazır!</b></span></p>
-                            <p class="smallText text-white opacity-80 mt-3">İşte hazırsın! artık kayıt sistemine
-                                sahipsin.</p>
+                            <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Her Şey
+                                        Hazır!</b></span></p>
+                            <p class="smallText text-white opacity-80 mt-3">İşte Hazır! Artık Botu
+                                Kullanabilirsin</p>
                         </div>
                     </div>
                 </div>
@@ -166,7 +163,7 @@
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
                 <a href="/invite" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna ekle
+                    Sunucuna Ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
