--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             </h1>
             <p class="regularText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48">FunBot, Sunucun İçin Sana Yardımcı Olabilecek Bot.</p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-                <a href="/invite" target="_blank"
+                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                     Sunucuna ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
+                        xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
                         <path fill-rule="evenodd"
                             d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
                             clip-rule="evenodd"></path>
@@ -106,7 +106,7 @@
                         Olacak</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
                     <span class="opacity-60">Tamamen Türkçe</span></span></p>
-            <img class="mt-8" src="/assets/img/TYPE1.png" draggable="false" alt="IMG">
+           
         </div>
     </section>
 
@@ -161,7 +161,7 @@
             </div>
             <br><br>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
-                <a href="/invite" target="_blank"
+                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                     Sunucuna Ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -193,13 +193,13 @@
             <br>
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                    <img src="/assets/img/TYPE2.png" draggable="false" alt="IMG" width="500">
+                    
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
                     <p class="extraBoldText text-white opacity-90">Sistemi kur</p>
                     <p class="smallText text-white opacity-80 mt-4">F!Komutlar Yaz Ve 'Komutları Görüntüle' Butonuna Tıkla.</p>
-                    <a href="/invite" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
+                    <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
                 </div>
@@ -210,8 +210,8 @@
                 <div class="sectionGridItem">
                     <p class="extraBoldText text-white opacity-90">Moderasyon Komutları</p>
                     <p class="smallText text-white opacity-80 mt-4">Link Engel, Küfür Engel Gibi Sistemlerle Size Moderatörlük Yapsın.</p>
-                    <a href="/invite" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
+                    <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
                 </div>
@@ -232,8 +232,8 @@
                     <p class="smallText text-white opacity-80 mt-4">Sunucuya Üye Katıldığında Otomatik
                         Etiketler Ve
                         Mesaj Atarak Sunucuya Giriş Yaptığını Haberdar Eder.</p>
-                    <a href="/invite" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
+                    <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
 
@@ -342,7 +342,7 @@
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                     Sunucuna ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                        xmlns="http://www.w3.org/2000/svg">
+                        xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
                         <path fill-rule="evenodd"
                             d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
                             clip-rule="evenodd"></path>
@@ -379,8 +379,8 @@
                             </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
-                            <p class="smallText gradientColor mt-3"><a href="https://github.com/sineckers"
-                                    target="_blank" class="gradientUnderline">GitHub <i
+                            <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
+                                    target="_blank" class="gradientUnderline">Site <i
                                         class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
 
@@ -417,7 +417,7 @@
                             class="normalTextBold text-white blackBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                             Sunucuna ekle
                             <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                                xmlns="http://www.w3.org/2000/svg">
+                                xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
                                 <path fill-rule="evenodd"
                                     d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
                                     clip-rule="evenodd"></path>
