--- a/index.html
+++ b/index.html
@@ -194,10 +194,12 @@
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
                     
-                </div>
-                <div class="sectionGridItem sectionGridItemRight">
-                    <p class="extraBoldText text-white opacity-90">Sistemi kur</p>
-                    <p class="smallText text-white opacity-80 mt-4">F!Komutlar Yaz Ve 'Komutları Görüntüle' Butonuna Tıkla.</p>
+                <div class="sectionGrid mt-8 mb-8">
+                <div class="sectionGridItem">
+                    <p class="extraBoldText text-white opacity-90">Nasıl Kullanılır</p>
+                    <p class="smallText text-white opacity-80 mt-4">F!Komutlar Yaz Ve
+                        'Komutları Görüntüle'
+                        Butonuna Tıkla.</p>
                     <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
                         <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
@@ -208,8 +210,10 @@
             <br>
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                    <p class="extraBoldText text-white opacity-90">Moderasyon Komutları</p>
-                    <p class="smallText text-white opacity-80 mt-4">Link Engel, Küfür Engel Gibi Sistemlerle Size Moderatörlük Yapsın.</p>
+                    <p class="extraBoldText text-white opacity-90">Moderasyon</p>
+                    <p class="smallText text-white opacity-80 mt-4">Moderatörlerin İşini Siz Yerinize
+                        Yapar
+                        Link Engel, Küfür Engel.</p>
                     <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
                         <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
@@ -338,7 +342,7 @@
             </div>
             <br>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
-                <a href="/invite" target="_blank"
+                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                     Sunucuna ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -413,7 +417,7 @@
                     </p>
                     <div
                         class="flex flex-col justify-center items-center space-y-4 sm:flex-row sm:justify-left sm:space-y-0 sm:space-x-4">
-                        <a href="/invite" target="_blank"
+                        <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                             class="normalTextBold text-white blackBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                             Sunucuna ekle
                             <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
