--- a/index.html
+++ b/index.html
@@ -482,15 +482,15 @@
                         </ul>
                     </div>
                     <div>
-                        <h2 class="regularTextIta mb-6 text-white">Yardım</h2>
+                           <h2 class="regularTextIta mb-6 text-white">Yardım</h2>
                         <ul class="smallText text-white opacity-80">
                             <li class="mb-4">
-                             
+                                <a href="https://discord.gg/xGrEvHrMgM" target="_blank" class="gradientUnderline">Discord Sunucusu</a>
+                            </li>
                             <li class="mb-4">
-                                <a href="https://discord.gg/6tKKyabxZc" target="_blank" class="gradientUnderline">Discord Sunucusu</a>
+                                <a href="mailto:funbot.develepor@gmail.com" target="_blank" class="gradientUnderline">İletişim</a>
                             </li>
                             <li>
-                                <a href="mailto:funbot.develepor@gmail.com" class="gradientUnderline">funbot.develepor@gmail.com</a>
                             </li>
                         </ul>
                     </div>
