--- a/index.html
+++ b/index.html
@@ -338,6 +338,42 @@
                             <p class="smallText text-white opacity-80 mt-8">muhammed_2147 🇹🇷</p>
                         </div>
                     </div>
+                    <div class="cardWBg rounded-xl h-full">
+                        <div class="p-6 items-center overflow-hidden mt-5 mb-5">
+                            <p class="smallText opacity-80"><i class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i></p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>Severek Kullanıyoruz</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">Bot mükemmel sistemleri çok iyi severek kullanıyoruz</p>
+                            <p class="smallText text-white opacity-80 mt-8">exo_umut 🇹🇷</p>
+                        </div>
+                    </div>
+                    <div class="cardWBg rounded-xl h-full">
+                        <div class="p-6 items-center overflow-hidden mt-5 mb-5">
+                            <p class="smallText opacity-80"><i class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i></p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>Güzel</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">Bdfd'den yapılmış en güzel botlar arasında</p>
+                            <p class="smallText text-white opacity-80 mt-8">lowsx 🇹🇷</p>
+                        </div>
+                    </div>
+                     <div class="cardWBg rounded-xl h-full">
+                        <div class="p-6 items-center overflow-hidden mt-5 mb-5">
+                            <p class="smallText opacity-80"><i class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i> <i
+                                    class="fa-solid fa-star gradientColor"></i></p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>Harika</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">premium komutları güzelmiş</p>
+                            <p class="smallText text-white opacity-80 mt-8">mertsigma 🇹🇷</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <br>
