--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="/assets/img/e80e8719c41355797ba40adcb22b2888.png">
     <meta property="og:title" content="FunBot">
     <meta name="og:description" content="Discord Sunucun İçin Geliştirilmiş.">
-    <meta property="og:image" content="/assets/img/FunBot.png">
+    <meta property="og:image" content="/assets/img/e80e8719c41355797ba40adcb22b2888.png">
     <meta property="og:url" content="/">
     <meta name="theme-color" content="#5a4fcf">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"
@@ -88,7 +88,7 @@
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
                 <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna ekle
+                    Sunucuna Ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
                         <path fill-rule="evenodd"
@@ -99,6 +99,20 @@
                 <a href="#features"
                     class="normalTextBold text-white secBg opacity-60 hover:opacity-100 inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                     Özellikler
+                </a>
+            </div>
+             </svg>
+                </a>
+                <a href="https://funbot-komutlar-qyuha1u.gamma.site/"
+                    class="normalTextBold text-white secBg opacity-60 hover:opacity-100 inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
+                    Komutları Görüntüle
+                </a>
+            </div>
+        </svg>
+                </a>
+                <a href="https://stats.uptimerobot.com/AzzknhrM6Y"
+                    class="normalTextBold text-white secBg opacity-60 hover:opacity-100 inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
+                    Api Durumu
                 </a>
             </div>
             <p class="smallText text-white opacity-90 mt-8 mb-8 sm:px-16 lg:px-48"><span class="mr-2"><i
@@ -134,7 +148,7 @@
                         <div class="items-center overflow-hidden">
                             <p class="smallText text-white opacity-80 mt-5">Adım 1</p>
                             <p class="boldText text-white opacity-90 mt-3"><span class="gradientColor"><b>Sunucuna
-                                        ekle</b></span></p>
+                                        Ekle</b></span></p>
                             <p class="smallText text-white opacity-80 mt-3">FunBot'u Sunucuna Ekle.</p>
                         </div>
                     </div>
@@ -298,7 +312,7 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
                             <p class="boldText text-white opacity-90 mt-3"><b>Altın Kadar İyi</b></p>
-                            <p class="smallText text-white opacity-80 mt-3">Bot Komutları Çok Güzel Müq Komutları hoşuma</p>
+                            <p class="smallText text-white opacity-80 mt-3">Bot Komutları Çok Güzel Müq Komutları hoşuma gitti </p>
                             <p class="smallText text-white opacity-80 mt-8">ghostkurt 🇹🇷</p>
                         </div>
                     </div>
