--- a/index.html
+++ b/index.html
@@ -511,6 +511,14 @@
                             <li>
                                 <a href="https://politikalar-jds2tca.gamma.site/" target="_blank" class="gradientUnderline">Gizlilik Politikası</a>
                             </li>
+                        </li>
+                            <li>
+                                <a href="https://funbot-komutlar-qyuha1u.gamma.site/" target="_blank" class="gradientUnderline">Komutları Görüntüle</a>
+                            </li>
+                       </li>
+                            <li>
+                                <a href="https://stats.uptimerobot.com/AzzknhrM6Y" target="_blank" class="gradientUnderline">Api Durumu</a>
+                            </li>
                         </ul>
                     </div>
                     <div>
