--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
-                <img src="/assets/img/Nors.png" draggable="false" class="h-7 mr-3" alt="IMG">
+                
                 <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
             </a>
             <div class="flex md:order-2">
                 <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"><button type="button"
-                        class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"><i class="fa-brands fa-discord mr-2"></i> Sunucuna ekle</button></a>
+                        class="normalTextBold text-black gradientBg rounded-full px-6 py-3 text-center mr-3 md:mr-0"><i class="fa-brands fa-discord mr-2"></i> Sunucuna Ekle</button></a>
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 text-white rounded-xl md:hidden coloredBg aria-controls="
                     navbar-sticky" aria-expanded="false">
@@ -418,6 +418,7 @@
                         
                             </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
+                            <center><img src="/assets/img/.png" draggable="false" alt="IMG" style="width: 100%">
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
                                     target="_blank" class="gradientUnderline">Site <i
