--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         
                             </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
-                            <center><img src="/assets/img/.png" draggable="false" alt="IMG" style="width: 100%">
+                            <center><img src="/assets/img/500c9b26cd4b9e97dd0de1412b1e96b9.png.png" draggable="false" alt="IMG" style="width: 100%">
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
                                     target="_blank" class="gradientUnderline">Site <i
