--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         Olacak</span></span> <span class="mr-2"><i
                         class="fa-regular fa-check mr-1 opacity-90"></i>
                     <span class="opacity-60">Tamamen Türkçe</span></span></p>
-           
+           <img class="mt-8" src="assets/img/Untitled image.png" draggable="false" alt="IMG">
         </div>
     </section>
 
@@ -193,7 +193,7 @@
             <br>
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                    
+                 <img src="assets/img/Untitled image (1).png" draggable="false" alt="IMG" width="500">   
                 <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
                     <p class="extraBoldText text-white opacity-90">Nasıl Kullanılır</p>
@@ -208,6 +208,7 @@
             </div>
             <br>
             <br>
+             <img src="assets/img/Untitled image (2).png" draggable="false" alt="IMG" width="500">       
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
                     <p class="extraBoldText text-white opacity-90">Moderasyon</p>
@@ -230,12 +231,13 @@
             </div>
             <br>
             <br>
+             <img src="assets/img/Untitled image (3).png" draggable="false" alt="IMG" width="500">
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                    <p class="extraBoldText text-white opacity-90">Üyeleri Karşıla</p>
-                    <p class="smallText text-white opacity-80 mt-4">Sunucuya Üye Katıldığında Otomatik
-                        Etiketler Ve
-                        Mesaj Atarak Sunucuya Giriş Yaptığını Haberdar Eder.</p>
+                    <p class="extraBoldText text-white opacity-90">Anket Sistemi</p>
+                    <p class="smallText text-white opacity-80 mt-4">Anket Sistemi Kurup Kullanıcıların
+                        Oy Vermesini Sağlayabilir
+                        Ve Anketi Yönetebilirsiniz.</p>
                     <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
                         <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
