--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FunBot – Discord Sunucun İçin En İyi Bot.</title>
-    <link rel="icon" type="image/png" href="/assets/img/Adsız tasarım.png">
+    <link rel="icon" type="image/png" href="Untitled image.png">
     <meta property="og:title" content="FunBot">
     <meta name="og:description" content="Discord Sunucun İçin Geliştirilmiş.">
     <meta property="og:image" content="/assets/img/e80e8719c41355797ba40adcb22b2888.png">
