--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="/" class="flex items-center">
-                   <img src="/assets/img/e80e8719c41355797ba40adcb22b2888.png" draggable="false" class="h-7 mr-3" alt="IMG">
+                   <img src="Untitled image.png" draggable="false" class="h-7 mr-3" alt="IMG">
                         <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
                     </a>
                     <br>
