--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         <div class="p-6 items-center overflow-hidden mt-5 mb-5">
                         
                             </center>
-                            <center><img src="/assets/img/500c9b26cd4b9e97dd0de1412b1e96b9.png.png" draggable="false" alt="IMG" style="width: 100%">
+                            <center><img src="assets/img/Untitled image (1).png" draggable="false" alt="IMG" style="width: 100%">
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
