--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <br>
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                 <img src="assets/img/TYPE2.png" draggable="false" alt="IMG" width="500">   
+                 <img src="Resim.png" draggable="false" alt="IMG" width="500">   
                 <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
                     <p class="extraBoldText text-white opacity-90">Nasıl Kullanılır</p>
