--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
             <br>
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
-                 <img src="Resim.png" draggable="false" alt="IMG" width="500">   
-                <div class="sectionGrid mt-8 mb-8">
-                <div class="sectionGridItem">
+                    <img src="Resim.png" draggable="false" alt="IMG" width="500">
+                </div>
+                <div class="sectionGridItem sectionGridItemRight">
                     <p class="extraBoldText text-white opacity-90">Nasıl Kullanılır</p>
                     <p class="smallText text-white opacity-80 mt-4">F!Komutlar Yaz Ve
                         'Komutları Görüntüle'
