--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
             </div>
             <br>
             <br>
-             <img src="assets/img/Untitled image (2).png" draggable="false" alt="IMG" width="500">       
             <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
                     <p class="extraBoldText text-white opacity-90">Moderasyon</p>
@@ -216,32 +215,30 @@
                         Yapar
                         Link Engel, Küfür Engel.</p>
                     <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
-                   
+                    <img src="/assets/img/Untitled image (2).png" draggable="false" alt="IMG" width="500">
                 </div>
             </div>
             <br>
             <br>
-           
-              </div>
-            </div>
-            <br>
-            <br>
-             <img src="assets/img/Untitled image (3).png" draggable="false" alt="IMG" width="500">
-            <div class="sectionGrid mt-8 mb-8">
+           <div class="sectionGrid mt-8 mb-8">
                 <div class="sectionGridItem">
+                    <img src="/assets/img/Untitled image (3).png" draggable="false" alt="IMG" width="500">
+                </div>
+                <div class="sectionGridItem sectionGridItemRight">
                     <p class="extraBoldText text-white opacity-90">Anket Sistemi</p>
                     <p class="smallText text-white opacity-80 mt-4">Anket Sistemi Kurup Kullanıcıların
                         Oy Vermesini Sağlayabilir
                         Ve Anketi Yönetebilirsiniz.</p>
                     <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
+
 
                 </div>
                 <div class="sectionGridItem sectionGridItemRight">
