--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
                                     class="fa-solid fa-star gradientColor"></i></p>
                             <p class="boldText text-white opacity-90 mt-3"><b>Sevdim</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Görüş Belirtmedi</p>
-                            <p class="smallText text-white opacity-80 mt-8">Domatesişko
- 🇹🇷</p>
+                            <p class="smallText text-white opacity-80 mt-8">Domatesişko 🇹🇷</p>
                         </div>
                     </div>
                     <div class="cardWBg rounded-xl h-full">
@@ -284,7 +283,7 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Muhteşem!</b></p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>Muhteşem</b></p>
                             <p class="smallText text-white opacity-80 mt-3">ufak sıkıntıları vardı fakat düzeltildi gayet iyi ve yeterli bir bot</p>
                             <p class="smallText text-white opacity-80 mt-8">player1453 🇹🇷</p>
                         </div>
@@ -308,7 +307,7 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Olağanüstü!</b></p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>Olağanüstü</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Botu Beğendim Hg Bb Çok İyi</p>
                             <p class="smallText text-white opacity-80 mt-8">biloooemin_6612 🇹🇷</p>
                         </div>
@@ -320,7 +319,7 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Hızlı!</b></p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>Hızlı</b></p>
                             <p class="smallText text-white opacity-80 mt-3">hızlı mesaj silmesini sevdim</p>
                             <p class="smallText text-white opacity-80 mt-8">.nope.e 🇹🇷</p>
                         </div>
@@ -332,7 +331,7 @@
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i> <i
                                     class="fa-solid fa-star gradientColor"></i></p>
-                            <p class="boldText text-white opacity-90 mt-3"><b>Çok iyi</b></p>
+                            <p class="boldText text-white opacity-90 mt-3"><b>Çok İyi</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bir bdfd botuna göre yapılabilecek en iyi komutları içeriyor</p>
                             <p class="smallText text-white opacity-80 mt-8">muhammed_2147 🇹🇷</p>
                         </div>
@@ -420,7 +419,9 @@
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
-                                    target="_blank" class="gradientUnderline">Site <i
+                                    target="_blank" class="gradientUnderline">Site<i
+                            <p class="smallText gradientColor mt-3"><a href="https://www.instagram.com/muh5895.dev/"
+                                    target="_blank" class="gradientUnderline">İnstagram<i                                                           
                                         class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
 
