--- a/index.html
+++ b/index.html
@@ -422,6 +422,11 @@
                                     target="_blank" class="gradientUnderline">Site <i                                                         
                                         class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
+                         </center>
+                            <center><img src=".........." draggable="false" alt="IMG" style="width: 100%">
+                            <p class="boldText text-white opacity-90 mt-5"><b>lowxs.</b></p>
+                            <p class="smallText text-white opacity-80 mt-3">Premium Danışman</p>
+                        </div>
 
                     </div>
                 </div>
