--- a/index.html
+++ b/index.html
@@ -422,8 +422,12 @@
                                     target="_blank" class="gradientUnderline">Site <i                                                         
                                         class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
-                         </center>
-                            <center><img src="assets/img/danışman.png" draggable="false" alt="IMG" style="width: 100%">
+                    </div>
+                    </div>
+                    <div class="cardWBg rounded-xl h-full">
+                        <div class="p-6 items-center overflow-hidden mt-5 mb-5">
+                            <center><img src="/assets/img/danışman.png" draggable="false" alt="IMG" style="width: 100%">
+                            </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>lowxs.</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Premium Danışman</p>
                         </div>
