--- a/index.html
+++ b/index.html
@@ -413,23 +413,25 @@
                 <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
                     <div class="cardWBg rounded-xl h-full">
                         <div class="p-6 items-center overflow-hidden mt-5 mb-5">
-                        
+                            <center><img src=".........." draggable="false" alt="IMG" style="width: 100%">
                             </center>
-                            <center><img src="/assets/img/Untitled image (1).png" draggable="false" alt="IMG" style="width: 100%">
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
-                                    target="_blank" class="gradientUnderline">Site <i                                                         
+                                    target="_blank" class="gradientUnderline">Sitesi <i
                                         class="fa-regular fa-arrow-right"></i></a></p>
-                       <div class="sm:px-16 lg:px-48 text-left">
-                <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
+                        </div>
+                    </div>
                     <div class="cardWBg rounded-xl h-full">
                         <div class="p-6 items-center overflow-hidden mt-5 mb-5">
-                        
-                            </center>
                             <center><img src="/assets/img/danışman.png" draggable="false" alt="IMG" style="width: 100%">
+                            </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>lowxs.</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Premium Danışmanı</p>
+                            <p class="smallText gradientColor mt-3"><a href="" target="_blank"
+                                    class="gradientUnderline">Test <i class="fa-regular fa-arrow-right"></i></a></p>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
