--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
                             </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>lowxs.</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Premium Danışmanı</p>
-                            <p class="smallText gradientColor mt-3"><a href="" target="_blank"
-                                    class="gradientUnderline">Test <i class="fa-regular fa-arrow-right"></i></a></p>
+                            <p class="smallText gradientColor mt-3"><a href="https://www.instagram.com/lowxs.two/" target="_blank"
+                                    class="gradientUnderline">İnstagram <i class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
                     </div>
                     </div>
