--- a/index.html
+++ b/index.html
@@ -413,12 +413,12 @@
                 <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
                     <div class="cardWBg rounded-xl h-full">
                         <div class="p-6 items-center overflow-hidden mt-5 mb-5">
-                            <center><img src="/assets/img/500c9b26cd4b9e97dd0de1412b1e96b9.png" draggable="false" alt="IMG" style="width: 100%">
+                            <center><img src="/assets/img/muh5895.pp.png" draggable="false" alt="IMG" style="width: 100%">
                             </center>
                             <p class="boldText text-white opacity-90 mt-5"><b>Muh5895</b></p>
                             <p class="smallText text-white opacity-80 mt-3">Bot Sahibi & Geliştirici</p>
                             <p class="smallText gradientColor mt-3"><a href="https://muh5895-52z0eqg.gamma.site/"
-                                    target="_blank" class="gradientUnderline">Sitesi <i
+                                    target="_blank" class="gradientUnderline">Kişisel Sitesi <i
                                         class="fa-regular fa-arrow-right"></i></a></p>
                         </div>
                     </div>
