--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
             <br>
             <div class="gradientBg rounded-xl">
                 <div class="p-3">
+                    <center><img src="Untitled image.png" draggable="false" alt="IMG" style="width: 100%">
                     <p class="extraBoldText text-black opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">FunBot'u Hemen Şimdi
                         Sunucuna Ekle!</p>
                     <p class="regularTextIta text-black opacity-80 mb-8 sm:px-16 lg:px-48">Discord Sunucun İçin En İyi
@@ -463,7 +464,7 @@
                         class="flex flex-col justify-center items-center space-y-4 sm:flex-row sm:justify-left sm:space-y-0 sm:space-x-4">
                         <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                             class="normalTextBold text-white blackBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                            Sunucuna ekle
+                            Sunucuna Ekle
                             <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                                 xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
                                 <path fill-rule="evenodd"
@@ -499,7 +500,7 @@
                         <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
                     </a>
                     <br>
-                    <p class="smallText text-white opacity-80 mb-1">Telif Hakkı © 2024 <a href="https://muh5895-52z0eqg.gamma.site/"
+                    <p class="smallText text-white opacity-80 mb-1">Telif Hakkı ©2024 <a href="https://muh5895-52z0eqg.gamma.site/"
                             target="_blank" class="gradientUnderline">Muh5895</a> Tarafından FunBot İçin Tasarlandı.
                     </p>
                     <p class="smallText text-white opacity-80 mb-3">Her Hakkı Saklıdır.</p>
