--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
                 <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna ekle
+                    Sunucuna Ekle
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847">
                         <path fill-rule="evenodd"
