--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         Yapar
                         Link Engel, Küfür Engel.</p>
                     <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
                 </div>
@@ -235,7 +235,7 @@
                         Oy Vermesini Sağlayabilir
                         Ve Anketi Yönetebilirsiniz.</p>
                     <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank">
-                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna ekle <i
+                        <p class="smallTextBold gradientColor gradientUnderline mt-3">Sunucuna Ekle <i
                                 class="fa-regular fa-arrow-right"></i></p>
                     </a>
 
