--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
                 <ul
                     class="text-white flex flex-col p-4 md:p-0 mt-4 border border-gray-800 rounded-xl md:flex-row md:space-x-8 md:mt-0 md:border-0">
                     <li>
-                        <a href="#top"
+                        <a href="#anasayfa"
                             class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0"><i class="fa-regular fa-house-blank"></i></a>
                     </li>
                     <li>
-                        <a href="#features"
+                        <a href="#özellikler"
                             class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0">Özellikler</a>
                     </li>
                     <li>
-                        <a href="#testimonials"
+                        <a href="#yorumlar"
                             class="normalText text-white whiteUnderline block py-2 pl-3 rounded md:hover:bg-transparent md:p-0">Yorumlar</a>
                     </li>
                 </ul>
