--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             clip-rule="evenodd"></path>
                     </svg>
                 </a>
-                <a href="#features"
+                <a href="#özellikler"
                     class="normalTextBold text-white secBg opacity-60 hover:opacity-100 inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
                     Özellikler
                 </a>
@@ -180,7 +180,7 @@
         </div>
     </section>
 
-    <section class="section" id="features">
+    <section class="section" id="özellikler">
         <div class="py-8 px-4 mx-auto max-w-6xl lg:py-16">
             <hr class="customHr">
             <br>
@@ -257,7 +257,7 @@
         </div>
     </section>
 
-    <section class="section" id="testimonials">
+    <section class="section" id="yorumlar">
         <div class="py-8 px-4 mx-auto max-w-6xl text-center lg:py-16">
             <p class="extraBoldText text-white opacity-90 mt-8 mb-2 sm:px-16 lg:px-48">Kullanıcı Yorumları
             </p>
