--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <ul
                     class="text-white flex flex-col p-4 md:p-0 mt-4 border border-gray-800 rounded-xl md:flex-row md:space-x-8 md:mt-0 md:border-0">
                     <li>
-                        <a href="#anasayfa"
+                        <a href="#top"
                             class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0"><i class="fa-regular fa-house-blank"></i></a>
                     </li>
                     <li>
