--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="container max-w-10xl mx-auto">
 
-    <nav class="sticky w-full z-20 anasayfa-0 left-0">
+    <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
                <img src="Untitled image.png" draggable="false" class="h-7 mr-3" alt="IMG"> 
@@ -62,7 +62,7 @@
                 <ul
                     class="text-white flex flex-col p-4 md:p-0 mt-4 border border-gray-800 rounded-xl md:flex-row md:space-x-8 md:mt-0 md:border-0">
                     <li>
-                        <a href="#anasayfa"
+                        <a href="#top"
                             class="normalText text-white whiteUnderline block py-2 pl-3 pr-6 rounded md:hover:bg-transparent md:p-0"><i class="fa-regular fa-house-blank"></i></a>
                     </li>
                     <li>
