--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                         <h2 class="regularTextIta mb-6 text-white">Bot</h2>
                         <ul class="smallText text-white opacity-80">
                             <li class="mb-4">
-                                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank" class="gradientUnderline">Sunucuna ekle</a>
+                                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank" class="gradientUnderline">Sunucuna Ekle</a>
                             </li>
                             <li>
                                 <a href="https://politikalar-jds2tca.gamma.site/" target="_blank" class="gradientUnderline">Gizlilik Politikası</a>
