--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
             </div>
             <br><br>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4 mt-8">
-                <a href="https://discord.com/oauth2/authorize?client_id=1076935404411944970&scope=bot%20applications.commands&permissions=2146958847" target="_blank"
+                <a href="https://funbot-1.gitbook.io/funbot-wiki" target="_blank"
                     class="normalTextBold text-black gradientBg inline-flex justify-center items-center py-3 px-6 text-center rounded-full">
-                    Sunucuna Ekle
+                    Wiki (Bot Hakkında Daha Fazla Bilgi)
                     <svg aria-hidden="true" class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd"
