--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="Untitled image.png">
     <meta property="og:title" content="FunBot">
     <meta name="og:description" content="Discord Sunucun İçin Geliştirilmiş.">
-    <meta property="og:image" content="/assets/img/e80e8719c41355797ba40adcb22b2888.png">
+    <meta property="og:image" content="assets/img/funbotgif.gif">
     <meta property="og:url" content="/">
     <meta name="theme-color" content="#5a4fcf">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"
@@ -493,7 +493,7 @@
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="/" class="flex items-center">
-                   <img src="Untitled image.png" draggable="false" class="h-7 mr-3" alt="IMG">
+                   <img src="assets/img/funbotgif.gif" draggable="false" class="h-7 mr-3" alt="IMG">
                         <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
                     </a>
                     <br>
