--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FunBot – Discord Sunucun İçin En İyi Bot.</title>
-    <link rel="icon" type="image/png" href="Untitled image.png">
+    <link rel="icon" type="image/png" href="assets/img/funbotgif.gif">
     <meta property="og:title" content="FunBot">
     <meta name="og:description" content="Discord Sunucun İçin Geliştirilmiş.">
     <meta property="og:image" content="assets/img/funbotgif.gif">
