--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FunBot – Discord Sunucun İçin En İyi Bot.</title>
-    <link rel="icon" type="image/png" href="assets/img/funbotgif.gif">
+    <link rel="icon" type="image/png" href="Untitled image.png">
     <meta property="og:title" content="FunBot">
     <meta name="og:description" content="Discord Sunucun İçin Geliştirilmiş.">
     <meta property="og:image" content="assets/img/funbotgif.gif">
@@ -40,7 +40,7 @@
     <nav class="sticky w-full z-20 top-0 left-0">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center">
-               <img src="assets/img/funbotgif.gif" draggable="false" class="h-7 mr-3" alt="IMG"> 
+               <img src="Untitled image.png" draggable="false" class="h-7 mr-3" alt="IMG"> 
                 <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
             </a>
             <div class="flex md:order-2">
@@ -493,7 +493,7 @@
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="/" class="flex items-center">
-                   <img src="assets/img/funbotgif.gif" draggable="false" class="h-7 mr-3" alt="IMG">
+                   <img src="Untitled image.png" draggable="false" class="h-7 mr-3" alt="IMG">
                         <span class="regularTextBold text-white self-center whitespace-nowrap">FunBot</span>
                     </a>
                     <br>
