--- a/index.html
+++ b/index.html
@@ -530,6 +530,10 @@
                                 <a href="https://discord.gg/xGrEvHrMgM" target="_blank" class="gradientUnderline">Discord Sunucusu</a>
                             </li>
                             <li class="mb-4">
+                                <a href="https://funbot-1.gitbook.io/funbot-wiki" target="_blank" class="gradientUnderline">Wiki</a>
+                            </li>
+
+                            <li class="mb-4">
                                 <a href="mailto:funbot.develepor@gmail.com" target="_blank" class="gradientUnderline">İletişim</a>
                             </li>
                             <li>
