--- a/index.html
+++ b/index.html
@@ -168,6 +168,19 @@
                             d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
                             clip-rule="evenodd"></path>
                     </svg>
+                    </a>
+            </div>
+            <div class="sm:px-16 lg:px-48 text-left">
+                <div class="grid grid-cols-1 gap-8 sm:gird-cols-1 md:grid-cols-3">
+                    <div class="cardWBg rounded-xl h-full">
+                        <div class="p-6 items-center overflow-hidden mt-5 mb-5">
+                            <p class="boldText text-white opacity-90 mt-3"><b>Premium Fiyatı </b></p>
+                            <p class="smallText text-white opacity-80 mt-3">İban (Direkt): TR520082900009491338297352
+Açıklama: FunBot Pro Ödemesi (KullanıcıAdınız)
+Almadan Önce Sonra Butondaki ''Premium'' Butonuna Tıkla Ve Aktifsem Bot Sahibi İle İletişime Geçip Premium'unu Al (Sunucuda Premium Rolü Alıcaksın)
+Uyarı: İade, Kontrol vb Sağlanabilmesi İçin Lütfen Açıklamada ki Gibi Yapın Örneği Verilmiştir Lütfen Aynısı Yapın Yoksa İade Yapamayacağız!</p>
+                            <p class="smallText text-white opacity-80 mt-8">Premium Sistemi</p>
+                        </div>
                 </a>
             </div>
             <p class="smallText text-white text-center opacity-90 mt-8 mb-8 sm:px-16 lg:px-48"><span class="mr-2"><i
