--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FunBot – Discord Sunucun İçin En İyi Bot.</title>
-    <link rel="icon" type="image/png" href="Untitled image.png">
-    <meta property="og:title" content="FunBot">
-    <meta name="og:description" content="Discord Sunucun İçin Geliştirilmiş.">
-    <meta property="og:image" content="assets/img/funbotgif.gif">
+    <title>FunDevs - Yazılım</title>
+    <link rel="icon" type="image/png" href="FunFavicon.png">
+    <meta property="og:title" content="FunDevs">
+    <meta name="og:description" content="Yazılım Şirketi.">
+    <meta property="og:image" content="assets/img/FunFavicon.png">
     <meta property="og:url" content="/">
     <meta name="theme-color" content="#5a4fcf">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css"
